Fix footer position on mobile, footer must be on the bottom

--- a/style.css
+++ b/style.css
@@ -304,6 +304,6 @@ footer .footer-container p {
     }
 
     footer {
-        margin: 32px 0px;
+        margin-top: 32px;
     }
 }
